# bonsai

./: .claudeignore  .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG_V2_EXECUTION_LOG.md  BONSAI_CONSOLIDATED_BACKLOG.md  BONSAI_CONSOLIDATED_BACKLOG_V10.md  BONSAI_CONSOLIDATED_BACKLOG_V11.md  BONSAI_CONSOLIDATED_BACKLOG_V12.md  BONSAI_CONSOLIDATED_BACKLOG_V2.md  BONSAI_CONSOLIDATED_BACKLOG_V3.md  BONSAI_CONSOLIDATED_BACKLOG_V4.md  BONSAI_CONSOLIDATED_BACKLOG_V5.md  BONSAI_CONSOLIDATED_BACKLOG_V6.md  BONSAI_CONSOLIDATED_BACKLOG_V7.md  BONSAI_CONSOLIDATED_BACKLOG_V8.md  BONSAI_CONSOLIDATED_BACKLOG_V9.md  CLAUDE.md  CLAUDE_CODE_RESUME_PROMPT.md  CODEX_HARVEST_RESUME_PROMPT.md  Cargo.toml  DECISIONS.md  PHASE4.md  PHASE5_ADDENDUM_REMEDIATION_AND_NLQUERY.md  PHASE5_HARVEST_PROMPT.md  PHASE5_PLAYBOOK_LIBRARY_BOOTSTRAP.md  PHASE5_REVIEW_AND_DESIGN.md  PROJECT_KICKOFF.md  README.md  bonsai.toml.example  build.rs  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build-baseline.yml  ci.yml  feedback-loop.yml  memory-budget.yml  nightly-integration.yml  release.yml  screenshot-diff.yml
chaos_plans/: README.md  baseline_mix.yaml  bgp_heavy.yaml  gradual_only.yaml
config/path_profiles/: campus_access.yaml  campus_core.yaml  campus_distribution.yaml  campus_wlc.yaml  dc_border_standard.yaml  dc_evpn_leaf.yaml  dc_leaf_minimal.yaml  dc_spine_standard.yaml  dc_superspine_standard.yaml  homelab_router.yaml  homelab_switch.yaml  sp_p_core.yaml  sp_p_sr_te.yaml  sp_pe_evpn.yaml  sp_pe_full.yaml  sp_pe_l3vpn.yaml  sp_peering_edge.yaml  sp_rr_basic.yaml
docker/: Dockerfile.bonsai  compose-external.yml  compose-netbox.yml
docker/configs/: all.toml  collector-1.toml  collector-2.toml  core.toml  lab-dc.toml  lab-sp.toml
docker/grafana/dashboards/: bonsai.json
docker/mock-servicenow/: Dockerfile  app.py  requirements.txt  seed.yaml
docker/prometheus/: prometheus.yml
docs/: DEVELOPMENT.md  SPRINT_4_TESTING_RESULTS.md  ai_feedback_examples.md  ai_feedback_protocol.md  archive_format.md  build_performance.md  collector_core_protocol.md  deployment_segmentation.md  deployment_volumes.md  distributed_tls.md  distributed_validation.md  external_infra.md  integration_compliance.md  resource_contract.md  ui_audit_2026-05-04.md
docs/grafana/: bonsai-interfaces.json  bonsai-overview.json
docs/path_profiles/: README.md  campus_access.md  campus_core.md  campus_distribution.md  campus_wlc.md  dc_border_standard.md  dc_evpn_leaf.md  dc_leaf_minimal.md  dc_spine_standard.md  dc_superspine_standard.md  homelab_router.md  homelab_switch.md  sp_p_core.md  sp_p_sr_te.md  sp_pe_evpn.md  sp_pe_full.md  sp_pe_l3vpn.md  sp_peering_edge.md  sp_rr_basic.md
docs/test_results/: SPRINT4_E2E_SUMMARY.md  TEMPLATE.md
docs/test_results/e2e_containerlab/: 20260502-fail.md  20260502-pass.md
lab/: fault_catalog.yaml
lab/dc/: Makefile  README.md  dc-evpn-srv6.clab.yml
lab/dc/configs/: host1.sh  host2.sh  host3.sh  (+9 more)
lab/fast-iteration/: 3node-srl.clab.yml  bonsai-phase4.clab.yml  deploy-mv.sh  deploy-p4.sh  deploy.sh  multivendor.clab.yml
lab/seed/: topology.yaml
lab/sp/: Makefile  README.md  sp-mpls-srte.clab.yml
lab/tools/: gnmi-creds.sh.example  probe-gnmi.sh
memory/: MEMORY.md  project_sprint_progress.md
playbooks/: DAY2_OPERATIONS_MATRIX.md  FUTURE_DETECTION_CANDIDATES.md  SOURCE_STRATEGY.md
playbooks/sources/: bfd_session_down.md  isis_adjacency_down.md  ospf_adjacency_down.md
proto/: bonsai_service.proto
python/: collector_engine.py  demo_phase4.py  demo_phase5.py  example.py  export_training.py  gen_protos.py  inject_fault.py  pyproject.toml  soak_test.py  train_anomaly.py  train_remediation.py
python/bonsai_sdk/: __init__.py  client.py  detection.py  engine.py  ml_detector.py  ml_remediation.py  remediations.py  training.py  training_readiness.py  window.py
python/bonsai_sdk/playbooks/: __init__.py  catalog.py  executor.py
python/bonsai_sdk/rules/: bfd.py  bgp.py  interface.py  topology.py
python/tests/: test_catalog_and_executor.py  test_coverage_gap_fill.py  test_discover_yang_paths.py  test_gen_profile_docs.py  test_integration_bgp_flap.py  test_seed_servicenow_pdi.py  test_t0_fixes.py  test_training_readiness.py  test_validate_playbooks.py  validate_p4.py
scripts/: archive_stats.py  backup_volumes.sh  build_bench.sh  chaos_runner.py  check_baseline_chaos.sh  check_dev_env.ps1  check_external.sh  check_lab.sh  check_training_readiness.py  configure_external.sh  dep_audit.sh  discover_yang_paths.py  e2e_compose_test.sh  e2e_containerlab_test.sh  e2e_netbox_enricher_test.sh  e2e_output_adapters_test.sh  e2e_path_validation_test.sh  e2e_servicenow_pdi_test.sh  gen_profile_docs.py  generate_compose_tls.sh  install_sccache.sh  regenerate_python_stubs.ps1  reset_for_test.sh  restore_volumes.sh  search_repo.ps1  seed_elastic.py  seed_external.sh  seed_lab.sh  seed_lab_creds.sh  seed_netbox.py  seed_servicenow_pdi.py  seed_splunk.py  set-wsl-route.ps1  start_baseline_chaos.sh  start_bonsai_windows.ps1  stop_bonsai_windows.ps1  validate_playbooks.py
src/: api.rs  archive.rs  assignment.rs  audit.rs  config.rs  counter_summarizer.rs  credentials.rs  discovery.rs  disk_guard.rs  event_bus.rs  gnmi_set.rs  graph.rs  http_server.rs  ingest.rs  lib.rs  main.rs  mcp_client.rs  memory_profile.rs  registry.rs  retention.rs  store.rs  subscriber.rs  subscription_status.rs  telemetry.rs
src/catalogue/: mod.rs
src/collector/: diagnostic_server.rs  graph.rs  mod.rs
src/enrichment/: factory.rs  mod.rs  netbox.rs  servicenow.rs
src/graph/: common.rs  mod.rs
src/output/: elastic.rs  mod.rs  prometheus.rs  servicenow_em.rs  splunk_hec.rs  traits.rs
src/remediation/: graduation.rs  mod.rs  rollback.rs  trust.rs
tests/api_driver/: run.py
tests/chaos_harness/: run.py
tests/event_driver/: run.py
tests/ui_driver/: a11y.spec.js  collectors.spec.js  events.spec.js  incidents.spec.js  operations.spec.js  package.json  playwright.config.js  screenshots.spec.js  topology.spec.js
ui/: package-lock.json  package.json
ui/src/: App.svelte  app.css
(+50 files in other folders)
