[package]
name = "bonsai"
version = "0.1.0"
edition = "2024"

[lib]
name = "bonsai"
path = "src/lib.rs"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC transport
tonic = { version = "0.13", features = ["tls-ring"] }

# Protobuf serialization
prost = "0.13"
prost-types = "0.13"

# Serialization (JSON output for Phase 1)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming helpers
tokio-stream = "0.1"

# Error handling
anyhow = "1"

# Config file parsing
toml = "0.8"

# Graph database
lbug = "0.15.3"

# Timestamp conversion for lbug Value::TimestampNs
time = { version = "0.3", features = ["parsing"] }

# UUID generation for StateChangeEvent primary keys
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3"
