[package]
name = "bonsai"
version = "0.1.0"
edition = "2024"

[lib]
name = "bonsai"
path = "src/lib.rs"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC transport
tonic = { version = "0.13", features = ["tls-ring"] }

# Protobuf serialization
prost = "0.13"
prost-types = "0.13"

# Serialization (JSON output for Phase 1)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"
age = "0.11"

# Columnar archive writer
arrow-array = "54"
arrow-schema = "54"
parquet = { version = "54", features = ["arrow", "zstd"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming helpers
tokio-stream = { version = "0.1", features = ["sync"] }

# Stream combinators used by API event streaming
futures = "0.3"

# Error handling
anyhow = "1"

# Config file parsing
toml = "0.8"

# Graph database
lbug = "0.15.3"

# Timestamp conversion for lbug Value::TimestampNs
time = { version = "0.3", features = ["parsing"] }

# UUID generation for StateChangeEvent primary keys
uuid = { version = "1", features = ["v4"] }

# Internal observability — exposes /metrics in Prometheus text format
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP API server for the Phase 6 UI (Axum + tower-http for CORS + static files)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3"
