[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsai-sdk"
version = "0.1.0"
description = "Python SDK for the Bonsai Network State Engine gRPC API"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["bonsai_sdk"]
